<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StartScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/slogan"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signinBtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FDFDFD"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="#9F1919"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SkipBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1ED11717"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/skip"
        android:textColor="#FDF9F9"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupBtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FDFDFD"
        android:fontFamily="sans-serif-black"
        android:text="@string/signUp"
        android:textColor="#9F1919"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/signinBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signinBtn"
        app:layout_constraintTop_toBottomOf="@+id/signinBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleBtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FDFDFD"
        android:fontFamily="sans-serif-black"
        android:text="@string/google"
        android:textColor="#9F1919"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signupBtn"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/OR"
        android:textColor="#8DFFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/signupBtn"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="315dp"
        android:layout_height="72dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/startlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"/>


</androidx.constraintlayout.widget.ConstraintLayout>