<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logosignup"
        android:layout_width="412dp"
        android:layout_height="206dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/signupUserName"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/usericon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logosignup" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/emailicon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/signupUserName"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/signupUserName"
        app:layout_constraintTop_toBottomOf="@+id/signupUserName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/passwordicon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signupEmail"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="@+id/signupEmail"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

    <EditText
        android:id="@+id/signupconfirmPassword"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/passwordicon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="140dp"
        android:layout_height="79dp"

        android:indeterminate="true"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="#9F1919"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountBtn"
        android:layout_width="274dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9F1919"
        android:fontFamily="sans-serif-black"
        android:text="@string/CreateAccount"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/signupconfirmPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signupconfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/signupconfirmPassword" />

    <TextView
        android:id="@+id/orTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/OR"
        android:textColor="#99000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/createAccountBtn"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/createAccountBtn"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn" />

    <ImageButton
        android:id="@+id/confirmpasswordIcond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintEnd_toEndOf="@+id/signupconfirmPassword"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/signupconfirmPassword"
        app:layout_constraintTop_toTopOf="@+id/signupconfirmPassword"
        tools:ignore="TouchTargetSizeCheck" />
    <ImageButton
        android:id="@+id/passwordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toTopOf="@+id/loginPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alreadyhaveaccount"
        android:textColor="#BF9F1919"
        app:layout_constraintEnd_toEndOf="@+id/orTv"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="@+id/orTv"
        app:layout_constraintTop_toBottomOf="@+id/orTv" />

    <TextView
        android:id="@+id/signUpifNotHaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textColor="#9F1919"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/orTv" />

</androidx.constraintlayout.widget.ConstraintLayout>